# betfing-predictor

./: main.py  pyproject.toml  readme.md  requirements.txt  tips.txt
