[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "jax>=0.5.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "lightgbm>=4.6.0",
    "xgboost>=3.0.4",
    "yagmail>=0.15.293",
]
